<resources>
    <string name="app_name">ShoppingList</string>
    <string name="itemname">ItemName</string>
    <string name="amount">AMOUNT</string>
    <string name="for_openinig_diablog_box">for openinig diablog box</string>
    <string name="add_shopping_item_in_the_list">Add Shopping Item in the List</string>
    <string name="name_of_the_items">Name of the Items</string>
    <string name="items_amount">Items Amount</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
</resources>