<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_margin="20dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtAddShoppingItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="10dp"
        android:text="@string/add_shopping_item_in_the_list"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_the_items"
        android:textStyle="normal"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/items_amount"
        android:textStyle="normal"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="-50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/txtAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="90dp"
        />
    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="-45dp"
        android:layout_gravity="end"
        android:text="@string/cancel"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
</LinearLayout>